--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation "androidx.fragment:fragment-ktx:1.2.5"
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"       //androidx 버전
     // 네이버 지도 SDK
     implementation 'com.naver.maps:map-sdk:3.12.0'
 }
