--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -52,4 +53,8 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"       //androidx 버전
     // 네이버 지도 SDK
     implementation 'com.naver.maps:map-sdk:3.12.0'
+
+    // 글라이드 이미지 라이브러리
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
