--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,11 @@
             android:name=".MainActivity"
             android:label="@string/app_name">
         </activity>
+
+        <activity
+            android:name=".ui.info.SignUpActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
