--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,18 @@
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="@string/naver_map_your_client_id_here" />
 
+<!--        <activity-->
+<!--            android:name=".SplashActivity"-->
+<!--            android:label="@string/app_name">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+
         <activity
-            android:name=".SplashActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,15 +43,10 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
-        </activity>
-
-        <activity
-            android:name=".ui.info.SignUpActivity"
-            android:label="@string/app_name">
-        </activity>
+<!--        <activity-->
+<!--            android:name=".ui.info.SignUpActivity"-->
+<!--            android:label="@string/app_name">-->
+<!--        </activity>-->
     </application>
 
 </manifest>
