Update info fragment page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,10 +43,10 @@
             </intent-filter>
         </activity>
 
-<!--        <activity-->
-<!--            android:name=".ui.info.SignUpActivity"-->
-<!--            android:label="@string/app_name">-->
-<!--        </activity>-->
+        <activity
+            android:name=".ui.info.SignUpActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
