--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,12 @@
         <activity
             android:name=".ui.info.SignUpActivity"
             android:label="@string/app_name"></activity>
+
+        <activity
+            android:name=".ui.StoreDetailActivity"
+            android:label="@string/app_name"></activity>
+
+
     </application>
 
 </manifest>
